# pdf-rag-assistant

./: README.md  create_db.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
